[tool.poetry]
name = "marketholidays"
version = "0.11.0"
description = ""
authors = ["Micheal Omojola <https://github.com/OmoMicheal>"]
readme = "README.md"
packages = [{include = "marketholidays"}]

[tool.poetry.dependencies]
python-dateutil = "*"
six = "*"
convertdate = ">=2.3.0"
korean_lunar_calendar = "*"
hijri_converter = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "*"
pre-commit = "^3.1.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
coverage = "^7.2.1"
pytest = "^7.2.2"
pytest-cov = "4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py36', 'py37', 'py38', 'py39', 'py310', 'py311']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.run]
branch = true
include = [
  'tests.py',
]
omit = [
  'setup.py',
  'holidays/__init__.py',
  'test/*',
  'tests.py',
# comment the above line if you want to see if all tests did run
  ]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
  # Have to re-enable the standard pragma
  'pragma: no cover',

  # Don't complain about missing debug-only code:
  'def __repr__',
  'if self\.debug',

  # Don't complain if tests don't hit defensive assertion code:
  'raise AssertionError',
  'raise NotImplementedError',

  # Don't complain if non-runnable code isn't run:
  'if 0:',
  'if __name__ == .__main__.:',
]
