[tool.poetry]
name = "marketanalysis"
version = "0.1"
description = "A repository for market holidays and trading days in NYSE and NASDAQ"
authors = ["Micheal Omojola <momojola@aust.edu.ng>"]
license = "MIT License"
readme = "README.rst"

[tool.poetry.dependencies]
convertdate = ">=2.3.0"
datetime = "*"
hijri_converter = "*"
korean_lunar_calendar = "*"
python = ">=3.8,<4.0"
python-dateutil = "*"
six = "*"
pip = ">=19.2.3"
wheel = ">=0.33.6"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "*"
pre-commit = "^3.1.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
coverage = "^7.2.1"
pytest = "^7.2.2"
pytest-cov = "4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py36', 'py37', 'py38', 'py39', 'py310', 'py311']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.run]
branch = true
include = [
  'tests.py',
]
omit = [
  'setup.py',
  'holidays/__init__.py',
  'test/*',
  'tests.py',
# comment the above line if you want to see if all tests did run
  ]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
  # Have to re-enable the standard pragma
  'pragma: no cover',

  # Don't complain about missing debug-only code:
  'def __repr__',
  'if self\.debug',

  # Don't complain if tests don't hit defensive assertion code:
  'raise AssertionError',
  'raise NotImplementedError',

  # Don't complain if non-runnable code isn't run:
  'if 0:',
  'if __name__ == .__main__.:',
]
